--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/namuuu/tira-rpg#readme",
   "dependencies": {
-    "discord.js": "^13.10.2",
+    "discord.js": "^13.10.3",
     "dotenv": "^16.0.1",
-    "mongodb": "4.8"
+    "mongodb": "^4.9.1"
   },
   "devDependencies": {
     "eslint": "^8.22.0"
