--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/namuuu/tira-rpg#readme",
   "dependencies": {
+    "@discordjs/collection": "^1.1.0",
     "discord.js": "^13.10.3",
     "dotenv": "^16.0.1",
     "mongodb": "^4.9.1"
