--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tira-rpg",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tira's RPG is a discord bot that aims to provide a great experiences around an entire game that fits in the code of a simple discord bot. This adventure will contain a variety of armors, skills, items and activities to discover. As we implement new features frequently, we want to keep your perception of the game as fresh as possible, always having something new to do.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,11 +18,12 @@
   "homepage": "https://github.com/namuuu/tira-rpg#readme",
   "dependencies": {
     "@discordjs/collection": "^1.1.0",
-    "discord.js": "^14.0.2",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.1",
-    "mongodb": "^4.9.1"
+    "mongodb": "4.10"
   },
   "devDependencies": {
     "eslint": "^8.22.0"
-  }
+  },
+  "keywords": []
 }
