testing : getting fastest player debugging

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/namuuu/tira-rpg#readme",
   "dependencies": {
     "@discordjs/collection": "^1.1.0",
+    "@discordjs/rest": "^1.5.0",
+    "discord-api-types": "^0.37.28",
     "discord.js": "^14.0.2",
     "dotenv": "^16.0.1",
     "mongodb": "4.10"
